--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/t0mm4rx/Pronostaic#readme",
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "synaptic": "^1.1.4"
   }
 }
